--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 AM_CPPFLAGS=-I$(top_srcdir)/include
 
 SUBDIRS= include src
-EXTRA_DIST= config.rpath config.rpath mkinstalldirs INSTALL TODO README configure
+EXTRA_DIST= config.rpath config.rpath README configure version.m4
 AUTOMAKE_OPTIONS=foreign
 ACLOCAL_AMFLAGS = -I m4
 
