more autotools / git stuff.

--- a/m4/Makefile
+++ b/m4/Makefile
@@ -151,16 +151,16 @@ OBJEXT = o
 PACKAGE = serial-latency-test
 PACKAGE_BUGREPORT = jakob.flierl@gmail.com
 PACKAGE_NAME = serial-latency-test
-PACKAGE_STRING = serial-latency-test 0.0.1-1
+PACKAGE_STRING = serial-latency-test 0.0.1
 PACKAGE_TARNAME = serial-latency-test
 PACKAGE_URL = 
-PACKAGE_VERSION = 0.0.1-1
+PACKAGE_VERSION = 0.0.1
 PATH_SEPARATOR = :
 RANLIB = ranlib
 SET_MAKE = 
 SHELL = /bin/sh
 STRIP = 
-VERSION = 0.0.1-1
+VERSION = 0.0.1
 abs_builddir = /home/bb/serial-latency-test/m4
 abs_srcdir = /home/bb/serial-latency-test/m4
 abs_top_builddir = /home/bb/serial-latency-test
