more autotools / git stuff.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,4 +2,4 @@ LDADD = -lm @CLOCK_LIB@
 
 bin_PROGRAMS = serial-latency-test
 
-serial_latency_test_SOURCES = serial-latency-test.c serial.c
+serial_latency_test_SOURCES = serial-latency-test.c serial.c serial.h hr_timer.h
