--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
-# http://www.gnu.org/software/automake
+
+src/Makefile
+src/Makefile.in
+
+m4/Makefile
+m4/Makefile.in
+
+include/config.h
+include/Makefile
+include/Makefile.in
 
 Makefile.in
+Makefile
 
 # http://www.gnu.org/software/autoconf
 
+/config.log
+/config.status
 /autom4te.cache
 /aclocal.m4
 /compile
